[FIX] add lesson section tablet layout

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -128,12 +128,16 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 @media screen and (max-width: 768px) {
-    .col {
-        display: inline-block;
+    .container {
+        width: 100%;
     }
-    .steps.text-center .container {
-        background-color: #eebbc3;
-        height: 100%;
-        width: 100vw;
+}
+
+@media screen and (max-width: 480px) {
+    .row {
+        flex-direction: column;
+    }
+    .lessons .col {
+        width: 100%;
     }
 }
